root/apps/services/admin-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-api-ingress
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ "admin-api.preprod.qoffice.cloud" ]
      secretName: admin-api-tls
  rules:
    - host: admin-api.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: admin-api, port: { number: 8085 } } }
